Alembic export with fluid simulation (resolution 250) causes Blender to close down with no errors #52814

Closed
opened 2017-09-18 15:23:20 +02:00 by Brian Davidson · 16 comments

System Information
Windows 10, 32Gb RAM, AMD Ryzen 7, GTX1060 6Gb

Blender Version
2.79 Hash 5bd8ac9

Short description of error
Alembic export with fluid simulation (resolution 250) causes Blender to close down with no errors

Exact steps for others to reproduce the error
Select export, Alembic, save file

**System Information** Windows 10, 32Gb RAM, AMD Ryzen 7, GTX1060 6Gb **Blender Version** 2.79 Hash 5bd8ac9 **Short description of error** Alembic export with fluid simulation (resolution 250) causes Blender to close down with no errors **Exact steps for others to reproduce the error** Select export, Alembic, save file
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BRIANDAVIDSON

Added subscriber: @BRIANDAVIDSON

Added subscribers: @dr.sybren, @Sergey

Added subscribers: @dr.sybren, @Sergey
Sybren A. Stüvel was assigned by Sergey Sharybin 2017-09-19 13:55:13 +02:00

Does it happen with default cube scene?

@dr.sybren , adding it on your radar ;)

Does it happen with default cube scene? @dr.sybren , adding it on your radar ;)
Author

You would need to create a fluid sim with a resolution of 240. I could get it to export OK with a resolution of 200 and dropping the number of frames from 200 to 50 in the animation.

You would need to create a fluid sim with a resolution of 240. I could get it to export OK with a resolution of 200 and dropping the number of frames from 200 to 50 in the animation.

Please attach a blend file that lets us reproduce this issue.

Please attach a blend file that lets us reproduce this issue.
Author

No problem, I'll upload one later.

No problem, I'll upload one later.
Author

bd stream.blend

I've uploaded a blend file, you'll need to bake out the simulation before trying to export it as an Alembic file to see the issue.

Cheers

[bd stream.blend](https://archive.blender.org/developer/F825485/bd_stream.blend) I've uploaded a blend file, you'll need to bake out the simulation before trying to export it as an Alembic file to see the issue. Cheers

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

A requested file was attached to the report. Changing the priority.

A requested file was attached to the report. Changing the priority.
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

baking took forever, and i needed the debug heap (asan will probably catch it on linux) to trigger the issue but here's a stackdump

 	blender.exe!Alembic::Util::v10::MurmurHash3_x64_128(void const *,unsigned __int64,unsigned __int64,void *)	Unknown
 	blender.exe!Alembic::AbcCoreAbstract::v10::ArraySample::getKey(void)	Unknown
 	blender.exe!Alembic::AbcCoreOgawa::v10::ApwImpl::setSample(class Alembic::AbcCoreAbstract::v10::ArraySample const &)	Unknown
 	blender.exe!Alembic::Abc::v10::OArrayProperty::set(class Alembic::AbcCoreAbstract::v10::ArraySample const &)	Unknown
 	blender.exe!Alembic::Abc::v10::OTypedArrayProperty<struct Alembic::Abc::v10::V3fTPTraits>::set(class Alembic::Abc::v10::TypedArraySample<struct Alembic::Abc::v10::V3fTPTraits> const &)	Unknown
 	blender.exe!Alembic::AbcGeom::v10::SetPropUsePrevIfNull<class Alembic::Abc::v10::OTypedArrayProperty<struct Alembic::Abc::v10::V3fTPTraits>,class Alembic::Abc::v10::TypedArraySample<struct Alembic::Abc::v10::V3fTPTraits> >(class Alembic::Abc::v10::OTypedArrayProperty<struct Alembic::Abc::v10::V3fTPTraits>,class Alembic::Abc::v10::TypedArraySample<struct Alembic::Abc::v10::V3fTPTraits>)	Unknown
 	blender.exe!Alembic::AbcGeom::v10::OPolyMeshSchema::set(class Alembic::AbcGeom::v10::OPolyMeshSchema::Sample const &)	Unknown
>	blender.exe!AbcMeshWriter::writeMesh(DerivedMesh * dm) Line 448	C++

 	blender.exe!AbcMeshWriter::do_write() Line 377	C++
 	blender.exe!AbcObjectWriter::write() Line 115	C++
 	blender.exe!AbcExporter::operator()(Main * bmain, float & progress, bool & was_canceled) Line 330	C++
 	blender.exe!export_startjob(void * customdata, short * stop, short * do_update, float * progress) Line 269	C++
 	blender.exe!do_job_thread(void * job_v) Line 338	C
 	blender.exe!tslot_thread_start(void * tslot_p) Line 254	C
baking took forever, and i needed the debug heap (asan will probably catch it on linux) to trigger the issue but here's a stackdump ``` blender.exe!Alembic::Util::v10::MurmurHash3_x64_128(void const *,unsigned __int64,unsigned __int64,void *) Unknown blender.exe!Alembic::AbcCoreAbstract::v10::ArraySample::getKey(void) Unknown blender.exe!Alembic::AbcCoreOgawa::v10::ApwImpl::setSample(class Alembic::AbcCoreAbstract::v10::ArraySample const &) Unknown blender.exe!Alembic::Abc::v10::OArrayProperty::set(class Alembic::AbcCoreAbstract::v10::ArraySample const &) Unknown blender.exe!Alembic::Abc::v10::OTypedArrayProperty<struct Alembic::Abc::v10::V3fTPTraits>::set(class Alembic::Abc::v10::TypedArraySample<struct Alembic::Abc::v10::V3fTPTraits> const &) Unknown blender.exe!Alembic::AbcGeom::v10::SetPropUsePrevIfNull<class Alembic::Abc::v10::OTypedArrayProperty<struct Alembic::Abc::v10::V3fTPTraits>,class Alembic::Abc::v10::TypedArraySample<struct Alembic::Abc::v10::V3fTPTraits> >(class Alembic::Abc::v10::OTypedArrayProperty<struct Alembic::Abc::v10::V3fTPTraits>,class Alembic::Abc::v10::TypedArraySample<struct Alembic::Abc::v10::V3fTPTraits>) Unknown blender.exe!Alembic::AbcGeom::v10::OPolyMeshSchema::set(class Alembic::AbcGeom::v10::OPolyMeshSchema::Sample const &) Unknown > blender.exe!AbcMeshWriter::writeMesh(DerivedMesh * dm) Line 448 C++ blender.exe!AbcMeshWriter::do_write() Line 377 C++ blender.exe!AbcObjectWriter::write() Line 115 C++ blender.exe!AbcExporter::operator()(Main * bmain, float & progress, bool & was_canceled) Line 330 C++ blender.exe!export_startjob(void * customdata, short * stop, short * do_update, float * progress) Line 269 C++ blender.exe!do_job_thread(void * job_v) Line 338 C blender.exe!tslot_thread_start(void * tslot_p) Line 254 C ```

Added subscriber: @HectorCenteno

Added subscriber: @HectorCenteno

Blender is also crashing each time I try to export a fluid simulation as an Alembic file. My simulation is about 500 frames and resolution of 65. I'm on Windows 10, Blender 2.79b. Attached project file for testing (needs baking, shouldn't take too long). Only by limiting the export to about 20 frames I'm able to avoid the crash.

entities_01.blend

Blender is also crashing each time I try to export a fluid simulation as an Alembic file. My simulation is about 500 frames and resolution of 65. I'm on Windows 10, Blender 2.79b. Attached project file for testing (needs baking, shouldn't take too long). Only by limiting the export to about 20 frames I'm able to avoid the crash. [entities_01.blend](https://archive.blender.org/developer/F3371103/entities_01.blend)

This issue was referenced by 817e2796cb

This issue was referenced by 817e2796cbe4c6e115c8a4b6bf535017043be930

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52814
No description provided.